# app-t

./: .gitignore  CMakeLists.txt  LICENSE  README.md  desktop.ini
app/: CMakeLists.txt  app.cpp
deploy/linux/deb/: app
deploy/linux/rhel/: app  setup-rhel.sh
include/: AppClass.h  CalPlotData.hpp  PlotType.hpp  Subplot.hpp  TextParse.hpp  mainwindow.hpp  plotwindow.hpp
scripts/: deploy-linux.bat  deploy-win-qt5.bat  deploy-win.bat  setup-deb.sh
src/: AppClass.cpp  CMakeLists.txt  CalPlotData.cpp  PlotType.cpp  Subplot.cpp  TextParse.cpp  mainwindow.cpp  mainwindow.ui  plotwindow.cpp  plotwindow.ui
